--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         task
     </h1>
     <a href="Task.html/task1.html">task1</a>
-    <a href="tasklayout.html">task2</a>
+    <a href="Tasklayout.html">task2</a>
 </body>
 </html>
