--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     </h1>
     <a href="Task.html/task1.html">task1</a>
     <a href="layout.html">task2</a>
+    <a href="Task3.html">task3</a>
 </body>
 </html>
