--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <a href="Task.html/task1.html">task1</a>
     <a href="layout.html">task2</a>
     <a href="Task3.html">task3</a>
-    <a href="login.html">task4</a>
-    <a href="calculator.html">task5</a>
+    <a href="login.html"> js-task1</a>
+    <a href="calculator.html"> js-task2</a>
+    <a href="search.html">js-task3</a>
 </body>
 </html>
