--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <a href="login.html"> js-task1</a>
     <a href="calculator.html"> js-task2</a>
     <a href="search.html">js-task3</a>
-    <a href="login!.html">Login page</a>
+    <a href="login1.html">Login page</a>
     <a href="register.html">Register page</a>
     <a href="questionbank.html">Insert Question-task</a>
-    <a href="qiz.html">Quiz task</a>
+    <a href="quiz.html">Quiz task</a>
 </body>
 </html>
